Mon Jul 26 13:01:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): should mark iseq itself other than normal
	  iseq.  [ruby-dev:41880]

Mon Jul 26 09:51:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): mark only self of normal iseqs, not
	  nodes.  [ruby-dev:41874]

Sun Aug  1 10:23:48 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/irb/init.rb (IRB.parse_opts): set VERBOSE to true when debug
	  switch called in irb.  a patch from Andrew Grimm in
	  [ruby-core:31558].

Sun Aug  1 09:35:35 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* bignum.c (big_op): comparison of bignum and infinity has returned 1
	  or -1, but it must return boolean.

Wed Jul 21 15:22:17 2010  Evan Phoenix <evan@fallingsnow.net>

	* lib/rubygems/custom_require.rb, gem_prelude.rb: Load code from
	  from gems properly.

Tue Jul 20 11:35:11 2010  Evan Phoenix  <evan@ruby-lang.org>

	* lib/rubygems.rb: Load the custom require if --disable-rubygems
	  was used.

Tue Jul 20 11:27:18 2010  Evan Phoenix  <evan@ruby-lang.org>

	* gem_prelude.rb: Pull in rubygem's custom require
	  [ruby-core:30846]

	* lib/rubygems.rb: Handle always having custom require available

Tue Jul 13 20:58:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_DEFAULT_ARCH): adjust for target
	  cpu. [ruby-core:31243]

Fri Jul 23 15:09:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_MINGW32): ignore msvc suffix.

Fri Jul 23 09:02:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_expr_str): fixed out-of-boundary access at invalid
	  multibyte characters.

Thu Jul 22 16:27:41 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_expr_str): fix broken Regexp#inspect when it
	  is ASCII-8BIT and non-ASCII character.
	  The length of character should be from original byte string.
	  [ruby-core:31431]

Thu Jul 22 03:02:55 2010  Eric Hodel  <drbrain@segment7.net>

	* README.EXT: fix signature of rb_ensure and rb_rescue to match